--- a/mysite/static/styles/main.css
+++ b/mysite/static/styles/main.css
@@ -14,6 +14,10 @@ body{
     margin-right: auto;
 }
 
+div.card, div.card-body{
+    border-radius: 20px;
+}
+
 p.p-icon{
     font-size: 14px;
     color: gray;
