--- a/static/styles/maindark.css
+++ b/static/styles/maindark.css
@@ -8,8 +8,8 @@ body{
 }
 
 #profile-pic{
-    width:150px;
-    height: 150px;
+    width:auto;
+    height: auto;
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
