--- a/static/styles/maindark.css
+++ b/static/styles/maindark.css
@@ -8,8 +8,8 @@ body{
 }
 
 #profile-pic{
-    width:auto;
-    height: auto;
+    width: fit-content;
+    height: fit-content;
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
