--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -7,8 +7,8 @@ body{
 }
 
 #profile-pic{
-    width: fit-content;
-    height: fit-content;
+    width:150px;
+    height: 150px;
     border-radius: 50%;
     margin-left: auto;
     margin-right: auto;
