Dark Mode and Light Mode : Mobile UI

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -20,7 +20,7 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3" style="margin-top:20px;">
                 <div class="card card-body pb-0 h-100" id="profile-wrapper">
                     <img id="profile-pic" src="{% static 'images/pp.jpg' %}">
                     <hr>
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9" style="margin-top:20px;">
                 <div class="card card-body h-100">
                     <h4>More About Me</h4>
                     <hr>
