Dark Mode and Light Mode : Mobile UI

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -25,7 +25,7 @@
                     <img id="profile-pic" src="{% static 'images/pp.jpg' %}">
                     <hr>
                     <h4>Hi, I'm Aswin!</h4>
-                    <p>I'm a CSE Undergrad skilled in Python.</p>
+                    <p>Until I Achieve;</p>
                     <hr>
                     <ul class="social-links" style="display: inline-block;">
                         <li style="display: inline-block;">
