--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-md-3" style="margin-top:20px;">
                 <div class="card card-body pb-0 h-100" id="profile-wrapper">
-                    <img id="profile-pic" src="{% static 'images/pp.jpg' %}">
+                    <img id="profile-pic" src="{% static 'images/pp_150.jpg' %}">
                     <hr>
                     <h4>Hi, I'm Aswin!</h4>
                     <p>Until I Achieve;</p>
