--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -43,6 +43,11 @@
                                 <span class="fa fa-instagram"></span>
                             </a>
                         </li>
+                        <li style="display: inline-block;">
+                            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=aswinrprasad@gmail.com" class="btn btn-social-icon btn-google" target="_blank">
+                                <span class="fa fa-google"></span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
