Updated Portfolio Information

--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -22,10 +22,11 @@
         <div class="row">
             <div class="col-md-3" style="margin-top:20px;">
                 <div class="card card-body pb-0 h-100" id="profile-wrapper">
-                    <img id="profile-pic" src="{% static 'images/pp_150.jpg' %}">
+                    <img id="profile-pic" src="{% static 'images/pp_150_2.jpeg' %}">
                     <hr>
-                    <h4>Hi, I'm Aswin!</h4>
-                    <p>Until I Achieve;</p>
+                    <h4>Hi, I'm <b>Aswin!</b></h4>
+                    <p><i>Until I Achieve;</i></p>
+                    <p>Project Engineer at Wipro Digital | Python | AWS Certified Cloud Practitioner | Java | DevOps | Microservices | Docker | Kubernetes | Git | Jenkins</p>
                     <hr>
                     <ul class="social-links" style="display: inline-block;">
                         <li style="display: inline-block;">
@@ -55,14 +56,22 @@
                 <div class="card card-body h-100">
                     <h4>More About Me</h4>
                     <hr>
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm a CSE undergrad who is very passionate about web development. I keep my mind engaged mostly
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I'm a Software Engineer passionate about Development & DevOps. I keep my mind engaged mostly
                         by taking on new projects which challenge and gives an opportunity to learn new things. With my
                         positive of being able to work hard until I achieve my goals for each day, I've self taught various
                         tech stacks to have a broad understanding of the projects that I've worked on. I'm usually a perfectionist when it comes to the work being done and also am experienced with using different
                         linux environments & CLI. I also love solving complicated problems and excel in team building and
                         team management. <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        I'm skilled in Python & Java. I have good exposure in DevOps(building Jenkins pipelines and integrating the CI/CD pipelines with NXRM, IQ Server and SonarQube for code quality and security) 
+                        and have also worked with Microservices with Java Springboot Framework.
+                        At my current role, I'm working to automate different areas with python and also maintaining/developing API endpoints 
+                        which integrates with an Angular Frontend. Also, have experience with and managed Kubernetes clusters on an enterprise level, docker swarm & docker compose.
+                        Currently learning full stack web development with MERN Stack and have done a few personal
+                        projects with the same. 
+                        <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         My other hobbies include, painting, writing poetry and reading. I'm well versed in English,
-                        Malayalam, Hindi and Tamil. Currently, I'm learning web development using Django Framework in python.
+                        Malayalam, Hindi and Tamil.
+                        
                     </p>
                 </div>
             </div>
@@ -87,7 +96,7 @@
                                 <path d="M0 0h1v16H0V0zm1 15h15v1H1v-1z"/>
                                 <path fill-rule="evenodd" d="M14.39 4.312L10.041 9.75 7 6.707l-3.646 3.647-.708-.708L7 5.293 9.959 8.25l3.65-4.563.781.624z"/>
                                 <path fill-rule="evenodd" d="M10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4h-3.5a.5.5 0 0 1-.5-.5z"/>
-                            </svg> CGPA : 7.26
+                            </svg> CGPA : 7.49
                             <br>
 
                             <svg class="bi bi-map" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -150,17 +159,23 @@
                     <ul id="tech-wrap">
                         <li><h5>Programming Languages</h5></li>
                         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Python, Java, C/C++</p>
-                        <li><h5>Database Query Language</h5></li>
-                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SQL(Structured Query Language)</p>
+                        <li><h5>Database</h5></li>
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SQL(Structured Query Language), MongoDB, AWS RDS</p>
                         <li><h5>Web Development</h5>
-                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HTML, CSS</p>
+                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;HTML, CSS, NodeJS, JavaScript</p>
                             <ul>
                                 <li><h6>Familiar Frameworks</h6></li>
-                                <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Django, Bootstrap</p>
+                                <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Django, Bootstrap, ReactJS, ExpressJS, SpringBoot</p>
                             </ul>
                         </li>
                         <li><h5>Version Control</h5></li>
                         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Git</p>
+                        <li><h5>Cloud</h5></li>
+                        <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AWS Certified Cloud Partitioner</p>
+                        <ul>
+                            <li><h6>Familiar Services</h6></li>
+                            <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;RDS, Amplify, EC2, EKS, DynamoDB, Lambda, API Gateway, ALB</p>
+                        </ul>
                     </ul>
                 </div>
                 <br>
@@ -185,6 +200,23 @@
                             <li>Technology Used: Python, Django, HTML, CSS-Bootstrap, Reportlab </li>
                             <li><a href="https://www.github.com/WDJ-PATH/PentagonWaterConsultants" target="_blank">View
                                 Project</a> | <a href="https://pentagonwaters.herokuapp.com/" target="_blank">View Webpage</a></li>
+                        </ul>
+                    </p>
+                    
+                    <p>
+                        <h5>Simple To-do App</h5>
+                        <p class="p-icon">
+                            <svg class="bi bi-calendar-date" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6.445 11.688V6.354h-.633A12.6 12.6 0 0 0 4.5 7.16v.695c.375-.257.969-.62 1.258-.777h.012v4.61h.675zm1.188-1.305c.047.64.594 1.406 1.703 1.406 1.258 0 2-1.066 2-2.871 0-1.934-.781-2.668-1.953-2.668-.926 0-1.797.672-1.797 1.809 0 1.16.824 1.77 1.676 1.77.746 0 1.23-.376 1.383-.79h.027c-.004 1.316-.461 2.164-1.305 2.164-.664 0-1.008-.45-1.05-.82h-.684zm2.953-2.317c0 .696-.559 1.18-1.184 1.18-.601 0-1.144-.383-1.144-1.2 0-.823.582-1.21 1.168-1.21.633 0 1.16.398 1.16 1.23z"/>
+                                <path fill-rule="evenodd" d="M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1zm1-3a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2z"/>
+                                <path fill-rule="evenodd" d="M3.5 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5zm9 0a.5.5 0 0 1 .5.5V1a.5.5 0 0 1-1 0V.5a.5.5 0 0 1 .5-.5z"/>
+                            </svg> June 2020
+                        </p>
+                        <ul id="proj-wrap1">
+                            <li>A web application for tracking your daily tasks & getting it done. Integrates login and account creation.</li>
+                            <li>Technology Used: MongoDB, ReactJS, NodeJS, ExpressJS, CSS-Bootstrap, HTML </li>
+                            <li><a href="https://github.com/aswinrprasad/mern-todo-app" target="_blank">View
+                                Project</a></li>
                         </ul>
                     </p>
 
